# tg_bot_tamplate_v1

./: .gitignore  .gitmodules  .note.md  :w  LICENSE  README.md  crib_for_setting_server.md  note.md  pyproject.toml
backups/: backup.txt  export.txt
src/: config.py  loader.py  main.py  scheduler_jobs.py
src/bot/: config.py  db.py  loader.py  main.py
src/bot/handlers/user/: main_menu.py
src/bot/sql/: create_tables.sql
src/db/: db.py
src/db/sql/: create_tables.sql
src/filters/: admin.py  sponsors.py
src/handlers/: __init__.py  backwards.py
src/handlers/admin/: additional_funcs.py  admins_management.py  distribution.py  main_menu.py  referral_links.py  sponsers.py  sponsors.py  stat.py  texts_management.py
src/handlers/client/: main_menu.py
src/handlers/user/: main_menu.py
src/markups/: keyboards.py
src/middleware/: check_subs.py
src/states/admin/: additional_funcs.py  admin_management.py  distribution.py  main_menu.py  referral_links.py  sponsors.py  texts_management.py
src/states/client/: main_menu.py
src/tmp_v1/: loader.py  main.py  markup.py  scheduler_jobs.py  texts.py
src/tmp_v1/handlers/user/: main_menu.py
src/tmp_v1/states/user/: main_menu.py
src/utils/: datetime.py  export_db.py
systemd/: bot.service
tools/: add_file_id.py
