[tool.poetry]
name = "tmp-v1"
version = "0.1.0"
description = "Tamplate with aiogram2 and psycopg2"
authors = ["Karimullin Arthur <KarimullinArthur@riseup.net>"]
license = "MIT"
readme = "README.md"
packages = [{include = "tmp_v1"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
